test/test262/src/function-forms/error/async-gen-named-func-expr.template
// Copyright (C) 2017 the V8 project authors. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
path: language/expressions/async-generator/named-
name: async generator named function expression
esid: sec-asyncgenerator-definitions-evaluation
info: |
    AsyncGeneratorExpression : async [no LineTerminator here] function * BindingIdentifier
        ( FormalParameters ) { AsyncGeneratorBody }

        [...]
        7. Let closure be ! AsyncGeneratorFunctionCreate(Normal, FormalParameters,
           AsyncGeneratorBody, funcEnv, strict).
        [...]
features: [async-iteration]
---*/

var callCount = 0;
var f;
f = async function* g(/*{ params }*/) {
  /*{ body }*/
  callCount = callCount + 1;
};

assert.throws(/*{ error }*/, function() {
  f(/*{ args }*/);
});
assert.sameValue(callCount, 0, 'generator function body not evaluated');
